# fufan-cc-flow

./: .gitignore  CLAUDE.md  DEV-PLAN.md  Product-Spec-CHANGELOG.md  Product-Spec.md  REQUIREMENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  桌面端打包记录.md
.github/workflows/: macos.yml  ping-mac.yml  ping.yml
client/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/scripts/: prepare-sidecar.mjs
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/tests/: system-store.test.ts  transport-chat.test.ts
desktop/: Cargo.toml
desktop/crates/cc-app/: Cargo.toml
desktop/crates/cc-app/src/: bridge.rs  markdown.rs  theme.rs
desktop/crates/cc-app/src/ui/: mod.rs
desktop/crates/cc-core/: Cargo.toml
desktop/crates/cc-core/examples/: abort_check.rs  permission_check.rs  pty_check.rs  resume_check.rs  session_check.rs  session_list_check.rs  streaming_check.rs  wire_spike.rs
desktop/crates/cc-core/src/: chat_model.rs  events.rs  lib.rs  transport.rs  util.rs
desktop/crates/cc-core/src/cli/: mod.rs  resolve.rs  spawn.rs
desktop/crates/cc-core/src/protocol/: args.rs  mod.rs  stdin_frames.rs  stdout_messages.rs
desktop/crates/cc-core/src/pty/: manager.rs  mod.rs
desktop/crates/cc-core/src/session/: index.rs  mod.rs  paths.rs  transcript.rs
scripts/: package-desktop.mjs  release-update.mjs
server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
server/.engram/: engram.redb
server/_archived_opencode/: opencodeAgentService.ts  opencodeBin.ts  opencodeCli.ts
server/src/: app.ts  (+1 more)
(+141 files in other folders)
