[package]
name = "cc-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "io-std", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
time = { version = "0.3.53", features = ["formatting"] }
portable-pty = "0.9.0"

[dev-dependencies]
tracing-subscriber = "0.3"
